ha/deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: homeassistant
spec:
  replicas: 1
  serviceName: homeassistant
  selector:
    matchLabels:
      name: homeassistant
  template:
    metadata:
      labels:
        name: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 3000
      #   fsGroup: 2000

      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: homeassistant
      dnsConfig:
        searches:
          - svc.cluster.local
          - homeassistant.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: edns0
          - name: ndots
            value: "1"
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2023.6.2
          name: homeassistant
          resources:
            limits:
              memory: 4096Mi
              cpu: '20'
            requests:
              memory: 512Mi
              cpu: '0.8'
          ports:
            - name: http
              containerPort: 8123
          volumeMounts:
            - name: pvc
              mountPath: /config
            - name: pvc
              mountPath: /root/.pysnmp/mibs
              subPath: mibs
      restartPolicy: Always
