ha/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.0.231
  name: homeassistant-lb
spec:
  type: LoadBalancer
  ports:
  - name: coiot
    port: 5683
    protocol: UDP
    targetPort: coiot
  - name: coiot
    port: 5683
    protocol: TCP
    targetPort: coiot
  - name: sonos
    port: 1400
    protocol: TCP
    targetPort: sonos
  selector:
    name: homeassistant
